test_fixtures/inheritance/parenthesized_superclass.lox
class Foo {}

// ParserError: [line 4] Error at '(': Expect superclass name.
class Bar < (Foo) {}
